# ms-sso

./: LICENSE  README.md  pyproject.toml
py_mssso/: __init__.py  helper.py
