[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_mssso"
version = "0.0.1"
description = "MS SSO Helper for Python"
readme = "README.md"
authors = [{ name = "Sungwon Um", email = "shineum@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["azure", "sso", "msal"]
dependencies = [
    "msal >= 1.31.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/shineum/py_mssso"